# nubs

./: .gitignore  CHANGELOG.md  README.rst  pyproject.toml
.github/workflows/: run_tests.yml
nubs/: __init__.py  __main__.py  cli.py  numpy_mods.py  optimized.py  passthrough.py  version.py
nubs/tests/: __init__.py  test_cli.py  test_numpy_mods.py  test_optimized.py  test_passthrough.py
